--- a/src/features/Main/Main.module.scss
+++ b/src/features/Main/Main.module.scss
@@ -1,4 +1,7 @@
 .main_wrapper {
-  background-color: #232323;
+  display: flex;
+  justify-content: center;
+  padding: 0 60px 60px;
   color: #ffffff;
+  background-color: #232323;
 }
