--- a/src/features/Header/components/Navbar/AddMovie/AddMovie.module.scss
+++ b/src/features/Header/components/Navbar/AddMovie/AddMovie.module.scss
@@ -12,3 +12,85 @@
 .add_btn:hover {
   cursor: pointer;
 }
+
+.modal_btns {
+  display: flex;
+  gap: 20px;
+  align-self: flex-end;
+}
+
+.modal_btn {
+  background-color: #f65261;
+  padding: 5px;
+  border-radius: 4px;
+  color: #ffffff;
+  height: 50px;
+  width: 200px;
+  font-size: 20px;
+  border: none;
+  text-transform: uppercase;
+  margin-top: 25px;
+  align-self: flex-end;
+}
+
+.modal_btn_secondary {
+  background-color: #232323;
+  padding: 5px;
+  border-radius: 4px;
+  color: #f65261;
+  height: 50px;
+  width: 200px;
+  font-size: 20px;
+  border: 1px solid #f65261;
+  text-transform: uppercase;
+  margin-top: 25px;
+  align-self: flex-end;
+}
+
+.modal_btn:hover,
+.modal_btn_secondary:hover {
+  cursor: pointer;
+}
+
+.modal_content {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
+.modal_label {
+  display: block;
+  margin: 20px 0 10px;
+  color: #f65261;
+  font-size: 20px;
+  text-transform: uppercase;
+}
+
+.modal_input {
+  width: 86%;
+  margin-right: 1rem;
+  background-color: #3e3e3e;
+  color: #ffffff;
+  height: 54px;
+  font-size: 20px;
+  opacity: 0.3;
+  padding: 0 20px;
+  border-radius: 4px;
+  border: none;
+}
+
+.modal_content .form_field_wrapper:nth-child(2n + 1) .modal_input {
+  width: 150%;
+}
+
+.modal_textarea {
+  resize: none;
+  width: 760px;
+  background-color: #3e3e3e;
+  color: #ffffff;
+  font-size: 20px;
+  opacity: 0.3;
+  padding: 20px;
+  border-radius: 4px;
+  border: none;
+}
