--- a/src/features/Main/MoviesControls/MoviesControls.module.scss
+++ b/src/features/Main/MoviesControls/MoviesControls.module.scss
@@ -7,7 +7,10 @@
 
 .movie_genre_list {
   display: flex;
-  gap: 30px;
+  gap: 20px 30px;
+  flex-wrap: wrap;
+  max-width: calc(100% - 260px);
+  margin-bottom: 20px;
 }
 
 .sort_span {
